--- a/app/views/hearings/pages/checkyouranswers.html
+++ b/app/views/hearings/pages/checkyouranswers.html
@@ -12,6 +12,7 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
                 {% if  data.drafthearing == 'falce'   %}
                     <h2 class="govuk-heading-l">Hearing details</h2>
@@ -429,5 +430,18 @@ Case details
             </div>
         </div>
     </main>
+
+
+
+
+
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
+
+
+
 
 {% endblock %}
