--- a/app/views/hearings/pages/panel.html
+++ b/app/views/hearings/pages/panel.html
@@ -12,9 +12,9 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
-
-                        <h2 class="govuk-heading-l">Who will be on the hearing panel?</h2>
+                        <h2 class="govuk-heading-m">Who will be on the hearing panel?</h2>
 
 
                         <form
@@ -136,7 +136,13 @@ Case details
 
 
 
+    function goBack() {
+        window.history.back();
+    }
 </script>
+
+
+
 
 
 
