--- a/app/views/hearings/layoutstaff.html
+++ b/app/views/hearings/layoutstaff.html
@@ -167,10 +167,10 @@
 
     {% block main %}
         <div style=" max-width:1860px; margin: 0 auto;">
-            <div style=" max-width:1860px;  min-width:960px;  margin: 20px 30px 0px 30px;  ">
+            <div style=" max-width:1860px;  min-width:960px;  margin: 00px 30px 0px 30px;  ">
 
                     {% block beforeContent %}{% endblock %}
-                    <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px;">
+                    <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px; padding-top: 0px;">
                         {% block content %}{% endblock %}
                     </main>
                 </div>
