--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -12,9 +12,9 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style="padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
-
-                        <h2 class="govuk-heading-l">Does the hearing have any other requirements?</h2>
+                        <h2 class="govuk-heading-m">Does the hearing have any other requirements?</h2>
 
                         <form
                             name="aspnetForm"
@@ -44,7 +44,32 @@ Case details
 
 
 
-                                <div class="govuk-form-group">
+                                <div class="govuk-form-group  govuk-!-padding-top-4">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                        <h3 class="govuk-fieldset__heading">
+                                            Parties requested reasonable adjustments
+                                        </h3>
+                                    </legend>
+
+                                    <table class="govuk-table" style="width:500px;">
+                                        <thead class="govuk-table__head">
+                                        </thead>
+                                        <tbody class="govuk-table__body">
+                                        <tr class="govuk-table__row">
+                                            <th scope="row" class="govuk-table__header" style="font-weight: 400;">Jane Smith</th>
+                                            <td class="govuk-table__cell">Hearing loop</td>
+                                        </tr>
+                                        <tr class="govuk-table__row">
+                                            <th scope="row" class="govuk-table__header" style="font-weight: 400;">DWP</th>
+                                            <td class="govuk-table__cell"</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+
+
+
+                                <div class="govuk-form-group govuk-!-padding-top-4">
                                     <div class="govuk-fieldset" aria-describedby="waste-hint">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                             <h3 class="govuk-fieldset__heading">
@@ -200,7 +225,7 @@ Case details
 
 
 
-                            <div class="govuk-form-group  govuk-!-margin-top-5" >
+                            <div class="govuk-form-group  govuk-!-margin-top-9" >
                                 <button class="govuk-button" data-module="govuk-button">
                                     Continue
                                 </button>
@@ -302,6 +327,14 @@ Case details
 
 
 
+
+
+    function goBack() {
+        window.history.back();
+    }
 </script>
+
+
+
 
 {% endblock %}
