--- a/app/views/hearings/pages/region.html
+++ b/app/views/hearings/pages/region.html
@@ -12,7 +12,7 @@ Case details
         <div class="govuk-grid-row"  style="max-width:1860px; margin: 0 auto;">
             <div class="govuk-tabs__panel" id="event" style=" padding: 0px; border-bottom: 0px; border-right: 0px; border-left: 0px; min-height: 300px;">
 
-
+                <a href="#" class="govuk-back-link govuk-!-margin-bottom-6">Back</a>
 
                         <!-- <h2 class="govuk-heading-l">Channel</h2>-->
 
@@ -27,7 +27,7 @@ Case details
 
                             <div class="govuk-form-group">
                                 <fieldset class="govuk-fieldset">
-                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                                         <h1 class="govuk-fieldset__heading">
                                             Where will the hearing take place?
                                         </h1>
